Updated NGO project with new features/changes

--- a/ngoproject/src/main/resources/application.properties
+++ b/ngoproject/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # Static resources settings
-spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/, file:src/main/resources/static/uploads/, file:src/main/resources/static/uploads/logos/
